# rocm-kernel-suite

./: .gitignore  CMakeLists.txt  README.md
kernels/: flash_attn.h  gemm.h
